--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,5 @@
 :root {
+    --portfolio-header-stroke: #ECECEC;
     --primary-text-color: #757575;
     --title-text-color: #212121;
     --accent-color: #2196F3;
@@ -7,6 +8,8 @@
     --background-secondary-color: #F5F4FA;
     --background-accent-color: #2F303A;
     --contacts-footer-color: rgba(255, 255, 255, 0.6);
+    --card-border: #EEEEEE;
+   
 }
 
 body {
@@ -18,6 +21,9 @@ body {
 
 
 .logo {
+   padding-top: 24px;
+   padding-bottom: 24px;
+   
     color: var(--accent-color);
     text-decoration: none;
     font-family: Raleway, sans-serif;
@@ -37,8 +43,32 @@ body {
 }
 
 /* Site nav */
+
+.main-nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.nav-flex {
+    display: flex;
+    align-items: center;
+}
+
+.site-nav {
+    display: flex;
+    margin-left: 93px;
+}
+
+.site-nav .item+.item{
+    margin-left: 50px;
+}
+
 .site-nav .link,
 .contacts-header {
+    display: block;
+    padding-top: 32px;
+    padding-bottom: 32px;
     color: var(--title-text-color);
     text-decoration: none;
     font-weight: 500;
@@ -58,6 +88,15 @@ body {
     color: var(--accent-color);
 }
 
+.contacts {
+    display: flex;
+    margin-left: auto;
+}
+
+.contacts .contacts-header+.contacts-header {
+    margin-left: 50px;
+}
+
 .contacts-header {
     color: var(--primary-text-color);
 }
@@ -68,7 +107,7 @@ body {
     width: 1200px;
     padding-left: 15px;
     padding-right: 15px;
-    outline: 2px solid tomato;
+    /* outline: 2px solid tomato; */
 }
 
 /* Hero */
@@ -131,6 +170,16 @@ body {
 
 /* Features */
 
+.feature-list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+}
+
+.feature-list .item {
+    width: 270px;
+}
+
 .feature-list .title {
     margin-top: 0;
     margin-bottom: 10px;
@@ -148,7 +197,28 @@ body {
     line-height: 1.71;
 }
 
+/* Work description */
+
+.work-descr {
+    display: flex;
+    justify-content: space-between;
+}
+
 /* Team */
+
+.team {
+    display: flex;
+    justify-content: space-between;
+}
+
+.team .item {
+    width: 270px;
+    background-color: var(--primary-white-color);
+}
+
+.team-bgcolor {
+    background-color: var(--background-secondary-color);
+}
 
 .team .title {
     margin-top: 30px;
@@ -157,6 +227,7 @@ body {
     font-size: 16px;
     line-height: 1.19;
     color: var(--title-text-color);
+    text-align: center;
 }
 
 .team .text {
@@ -164,6 +235,7 @@ body {
     margin-bottom: 30px;
     font-size: 16px;
     line-height: 1.19;
+    text-align: center;
 }
 
 /* Footer */
@@ -180,8 +252,8 @@ body {
     display: inline-block;
 }
 
-.mrg-logo {
-    margin-top: 0;
+.logo.mrg-logo {
+    padding: 0;
     margin-bottom: 20px;
 }
 
@@ -213,6 +285,20 @@ body {
 
 /* страница Портфоліо */
 
+.header-stroke {
+    border-top: 1px solid var(--portfolio-header-stroke);
+}
+
+.btn-list {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+}
+
+.btn-list .item + .item {
+    margin-left: 8px;
+}
+
 .btn-filter {
     border-radius: 4px;
     padding: 6px 25px;
@@ -235,9 +321,27 @@ body {
     background-color: var(--accent-color);
 }
 
+.work-list {
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.work-list .item {
+    width: calc((100% - 60px)/3);
+}
+
+.work-list .item:not(:nth-child(3n)) {
+    margin-right: 30px;
+}
+
+.work-list .item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+}
+
 .work-list .title {
     margin-top: 20px;
     margin-bottom: 4px;
+    margin-left: 24px;
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -248,9 +352,23 @@ body {
 .work-list .text {
     margin-top: 0;
     margin-bottom: 20px;
+    margin-left: 24px;
     font-size: 16px;
     line-height: 1.88;
 }
+
+.border-card {
+    display: flow-root;
+    border-left: 1px solid var(--card-border);
+    border-right: 1px solid var(--card-border);
+    border-bottom: 1px solid var(--card-border);
+}
+
+.card .no-gap {
+    display: block;
+}
+
+
 
 /* цвета на странице Студія
 
