--- a/css/styles.css
+++ b/css/styles.css
@@ -152,6 +152,7 @@ body {
 .section {
     padding-top: 94px;
     padding-bottom: 94px;
+    /* outline: 1px solid tomato; */
 }
 
 .section.non-padding {
@@ -324,18 +325,7 @@ body {
 .work-list {
     display: flex;
     flex-wrap: wrap;
-}
-
-.work-list .item {
-    width: calc((100% - 60px)/3);
-}
-
-.work-list .item:not(:nth-child(3n)) {
-    margin-right: 30px;
-}
-
-.work-list .item:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
+    gap: 30px;
 }
 
 .work-list .title {
@@ -356,6 +346,20 @@ body {
     font-size: 16px;
     line-height: 1.88;
 }
+
+.work-list .item {
+    flex-basis: calc((100% - 60px)/3);
+}
+
+/* .work-list .item:not(:nth-child(3n)) {
+    margin-right: 30px;
+}
+
+.work-list .item:not(:nth-last-child(-n + 3)) {
+    margin-bottom: 30px;
+} */
+
+
 
 .border-card {
     display: flow-root;
