--- a/css/styles.css
+++ b/css/styles.css
@@ -115,6 +115,7 @@ body {
 .hero {
     background-color: var(--background-accent-color);
     text-align: center;
+    padding: 200px 0;
 }
 .hero-title {
     margin-top: 0;
@@ -221,8 +222,13 @@ body {
     background-color: var(--background-secondary-color);
 }
 
+.team-name {
+    padding-top: 30px;
+    padding-bottom: 30px;
+}
+
 .team .title {
-    margin-top: 30px;
+    margin-top: 0;
     margin-bottom: 10px;
     font-weight: 500;
     font-size: 16px;
@@ -232,8 +238,7 @@ body {
 }
 
 .team .text {
-    margin-top: 0;
-    margin-bottom: 30px;
+    margin: 0;
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
@@ -329,9 +334,9 @@ body {
 }
 
 .work-list .title {
-    margin-top: 20px;
+    margin-top: 0;
     margin-bottom: 4px;
-    margin-left: 24px;
+    /* margin-left: 24px; */
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
@@ -340,9 +345,9 @@ body {
 }
 
 .work-list .text {
-    margin-top: 0;
-    margin-bottom: 20px;
-    margin-left: 24px;
+    margin: 0;
+    
+    /* margin-left: 24px; */
     font-size: 16px;
     line-height: 1.88;
 }
@@ -351,21 +356,14 @@ body {
     flex-basis: calc((100% - 60px)/3);
 }
 
-/* .work-list .item:not(:nth-child(3n)) {
-    margin-right: 30px;
-}
-
-.work-list .item:not(:nth-last-child(-n + 3)) {
-    margin-bottom: 30px;
-} */
-
-
-
 .border-card {
     display: flow-root;
     border-left: 1px solid var(--card-border);
     border-right: 1px solid var(--card-border);
     border-bottom: 1px solid var(--card-border);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 24px;
 }
 
 .card .no-gap {
