--- a/css/styles.css
+++ b/css/styles.css
@@ -355,12 +355,9 @@ body {
 
 .border-card {
     display: flow-root;
-    border-left: 1px solid var(--card-border);
-    border-right: 1px solid var(--card-border);
-    border-bottom: 1px solid var(--card-border);
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 24px;
+    border: 1px solid var(--card-border);
+    border-top: none;
+    padding: 20px 0 20px 24px;
 }
 
 .card .no-gap {
